[package]
name = "nuke_modules"
version = "0.1.0"
edition = "2024"
authors = ["kemicofa"]
description = "Nuke all node_modules starting from the current working directory."
license = "MIT"
readme = "README.md"
repository = "https://github.com/kemicofa/nuke_modules"
homepage = "https://github.com/kemicofa/nuke_modules"
keywords = ["node_modules", "nodejs", "node", "delete", "clean"]
categories = ["command-line-utilities"]

[[bin]]
name = "nuke_modules"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
async-recursion = "1.1.1"
clap = { version = "4.5.50", features = ["derive"] }
inquire = "0.9.1"
tokio = { version = "1.48.0", default-features = false, features = ["rt-multi-thread", "fs", "sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
